<resources>
    <string name="app_name">PopularMovie</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="image_content">image_content</string>
    <string name="created_by">Build by orlanth23</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_content_description">image_content_description</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_popular_movies_title">Popular movies</string>
    <string name="pref_top_rated_title">Top rated</string>
    <string name="pref_favorite_title">Favorites</string>

    <string name="pref_title_sort">Movies sort by</string>
    <string-array name="pref_list_sort_titles">
        <item>@string/pref_popular_movies_title</item>
        <item>@string/pref_top_rated_title</item>
        <item>@string/pref_favorite_title</item>
    </string-array>

    <string name="popularMovies">popularMovies</string>
    <string name="topRated">topRated</string>
    <string name="favorite">favorite</string>

    <string-array name="pref_list_sort_values">
        <item>@string/popularMovies</item>
        <item>@string/topRated</item>
        <item>@string/favorite</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_key_list_sort">pref_key_list_sort</string>
    <string name="menu_title_settings">Settings</string>
    <string name="pref_key_display_screen">pref_key_display_screen</string>
    <string name="pref_title_display_screen">Display title screen</string>
    <string name="release_date">Release date</string>
    <string name="defaultcontentdescription">defaultContentDescription</string>
    <string name="vote_average">Vote average</string>
    <string name="overview">Overview</string>
    <string name="youtube_trailer">Youtube Trailer</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="backdrop">backdrop</string>
    <string name="delete_from_favorite">Delete from favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="deleted_from_favorite">Deleted from favorite</string>
</resources>
