<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.orlanth23.popularmovie.activity.FullscreenActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_movie_db"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/movie_db"
        android:contentDescription="@string/image_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/created_by"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />
</RelativeLayout>
