<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.orlanth23.popularmovie.fragment.DetailMovieFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/movie_detail_poster"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_below="@id/movie_detail_title"
            android:contentDescription="@string/defaultcontentdescription" />

        <TextView
            android:id="@+id/static_release_date"
            style="@style/DetailMovieStaticField"
            android:layout_toRightOf="@id/movie_detail_poster"
            android:layout_toEndOf="@id/movie_detail_poster"
            android:layout_below="@id/movie_detail_title"
            android:text="@string/release_date" />

        <TextView
            android:id="@+id/movie_detail_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/static_release_date"
            android:layout_toEndOf="@id/static_release_date"
            android:layout_below="@id/movie_detail_title"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/static_voteAverage"
            style="@style/DetailMovieStaticField"
            android:layout_toRightOf="@id/movie_detail_poster"
            android:layout_toEndOf="@id/movie_detail_poster"
            android:layout_below="@id/static_release_date"
            android:text="@string/vote_average" />

        <TextView
            android:id="@+id/movie_detail_voteAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_toRightOf="@id/static_voteAverage"
            android:layout_toEndOf="@id/static_voteAverage"
            android:layout_below="@id/static_release_date"/>

        <TextView
            android:id="@+id/static_overview"
            style="@style/DetailMovieStaticField"
            android:layout_below="@+id/static_voteAverage"
            android:layout_alignLeft="@+id/static_voteAverage"
            android:layout_alignStart="@+id/static_voteAverage"
            android:text="@string/overview"/>
        <TextView
            android:id="@+id/movie_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/static_overview"
            android:layout_alignLeft="@+id/static_overview"
            android:layout_alignStart="@+id/static_overview"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>
</ScrollView>
